...
                    android:layout_marginTop="10dp"
                    android:text="Waitlist Max"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/waitlistMaxInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:hint="Leave empty for no limit"
                    android:inputType="number"
                    android:minHeight="0dp"
...
                    android:layout_marginTop="10dp"
                    android:text="Start Date"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/startDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:focusable="false"
                    android:hint="YYYY-MM-DD"
                    android:inputType="date"
...
                    android:layout_marginTop="10dp"
                    android:text="End Date"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/endDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:focusable="false"
                    android:hint="YYYY-MM-DD"
                    android:inputType="date"
...
