...
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/outline_person_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraIcon"
        app:layout_constraintEnd_toStartOf="@+id/OrganizerIcon"
        android:layout_marginBottom="16dp" />

    <!-- Hexagon Icon -->
    <ImageView
        android:id="@+id/OrganizerIcon"
        android:layout_width="40dp"
...
