...
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="-5dp"

        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:contentDescription="Close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Header -->
    <TextView
        android:id="@+id/headerText"
...
