<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/organizer_perms"
        android:title="Change Organizer Permissions"/>
    <item
        android:id="@+id/delete_user"
        android:title="Delete Account"/>
</menu>